reflow-maven-skin/src/main/resources/css/reflow-skin.css
/* ... */
/*--------------------------------------------------
 * nav list
 *--------------------------------------------------*/
.nav-list>li>a, .nav-list .nav-header {
    margin-left: -15px;
    margin-right: -15px;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
}

.nav-header {
    display: block;
    padding: 3px 15px;
    font-size: 11px;
    font-weight: bold;
    line-height: 20px;
    color: #999999;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
    text-transform: uppercase;
}

.nav li+.nav-header {
    margin-top: 9px;
}

.nav-list {
    padding-left: 15px;
    padding-right: 15px;
    margin-bottom: 0;
}

.nav-list>li>a, .nav-list .nav-header {
    margin-left: -15px;
    margin-right: -15px;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
}

.nav-list>li>a {
    padding: 3px 15px;
}

.nav-list>.active>a, .nav-list>.active>a:hover, .nav-list>.active>a:focus {
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
    background-color: #0088cc;
}

.nav-list [class^="glyphicon"], .nav-list [class*=" glyphicon"] {
    margin-right: 2px;
}

.nav-list .divider {
    *width: 100%;
    height: 1px;
    margin: 9px 1px;
    *margin: -5px 0 5px;
    overflow: hidden;
    background-color: #e5e5e5;
    border-bottom: 1px solid #ffffff;
}

/*--------------------------------------------------
 * dropdown submmenu
 *--------------------------------------------------*/
.dropdown-submenu {
    position: relative;
}

.dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px;
    border-radius: 0 6px 6px 6px;
}

.dropdown-submenu:hover>.dropdown-menu {
    display: block;
    right: auto;
}

.dropdown-submenu>a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    border-left-color: #ccc;
    margin-top: 5px;
    margin-right: -10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color: #484848;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left: -100%;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 6px 0 6px 6px;
}

@media ( max-width : 767px) {
    .dropdown-submenu .dropdown-menu {
        margin-left: 10px;
    }
}

/*--------------------------------------------------
 * carousel
 *--------------------------------------------------*/
.carousel-caption {
    width: 100%;
    opacity: 0.7;
    background-color: black;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 10px;
    padding-top: 0;
}

/*--------------------------------------------------
 * navbar
 *--------------------------------------------------*/
.navbar.affix {
    position: fixed;
    top: 50px;
    right: 0;
    left: 0;
    z-index: 1020; /* 10 less than .navbar-fixed to prevent any overlap */
    margin-bottom: 0;
    padding-left: 15px;
    padding-right: 15px;
}

.navbar.affix .navbar-inner {
    border-width: 0 0 1px;
    padding-right: 0;
    padding-left: 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 10px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 10px rgba(0, 0, 0, 0.1);
    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 10px rgba(0, 0, 0, 0.1);
}

/* Other screen sizes navbar container width */
@media ( min-width : 1200px) {
    .navbar.affix .container {
        width: 1170px;
    }
}

/*--------------------------------------------------
 * toc top
 *--------------------------------------------------*/
#toc-bar {
    z-index: 1120;
}

/*--------------------------------------------------
 * toc sidebar
 *--------------------------------------------------*/

/* affix toc aside bar
*/
.m-toc-sidebar-container {
    z-index: 1100;
}

.m-toc-sidebar-container.affix {
    top: 70px;
    width: 360px;
}

.m-toc-sidebar-container.affix-bottom {
    position: absolute;
    width: 360px;
}

@media ( min-width : 1200px) {
    .m-toc-sidebar-container.affix-bottom {
        width: 360px;
    }
}

.m-toc-sidebar {
    font-size: 13px;
    overflow-y: visible;
    padding: 4px 0 0 5px;
}

.m-nav--sidebar {
    margin-left: 5px !important;
}

.m-toc-sidebar .toc-heading, .m-nav--sidebar .h1 {
    font-size: 115%;
}

.m-toc-sidebar .toc-heading {
    font-weight: 500;
    margin: 0 0 16px 8px;
    padding: 0;
}

/*
.m-toc-sidebar .nav .nav {
    display: none;
    padding-bottom: 10px;
}
*/
.m-toc-sidebar li.active a {
    color: #1976d2;
    font-weight: 500;
}

.m-toc-sidebar li.active a:before {
    content: "";
    border-radius: 50%;
    left: -3px;
    top: 12px;
    background: #1976d2;
    position: absolute;
    width: 6px;
    height: 6px;
}

.m-toc-sidebar li a {
    font-size: inherit;
    color: #4d4c4c;
    overflow: visible;
    display: table-cell;
    padding: 0 0 0 10px;
    position: initial;
    line-height: 20px;
}



.m-toc-sidebar li:hover a {
    color: #1e88e5;
    background-color: transparent;
}

.m-toc-sidebar  li:not(.active ):hover a:before {
    content: "";
    border-radius: 50%;
    left: -3px;
    top: 10px;
    background: #dbdbdb;
    position: absolute;
    width: 6px;
    height: 6px;
}

.m-toc-sidebar {
    list-style-type: none;
    margin: 0;
    padding: 0 8px 0 0;
    line-height: 24px;
    font-size: 14px;
}

.m-toc-sidebar li {
    box-sizing: border-box;
    font-size: 14px;
    font-weight: 400;
    line-height: 16px;
    padding: 3px 0 3px 0px;
    margin: 0;
    position: relative;
    display: list-item;
    line-height: 16px;
}

.m-toc-sidebar li.h1:after {
    content: '';
    display: block;
    height: 1px;
    width: 40%;
    margin: 7px 0 4px 0;
    background: #DBDBDB;
    clear: both;
}
/* ... */

